--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Dota 2</title>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
@@ -27,7 +27,7 @@
 <p>Рейтинг в грі ти отримуєш відповідно до твоєї гри та можливостей в грі. Зазвичай,шоб підняти свій ранг потрібно заробити в середньому 150 ммр.</p>
 
 
-<img src="picture/mmr.jpg" class="img">
+<img src="mmr.jpg" class="img">
 <p>Найважливіші пункти в грі-це ммр,порядність та чесність</p>
 <table border="1">
     <tr>
@@ -56,7 +56,7 @@
         <li>Lion</li>
         
     </ol>
-    <img src="picture/rate.jpg" class="img">
+    <img src="rate.jpg" class="img">
 <footer>
     Made in 2013 by Valve
 </footer>
